--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "timed-count"
 version = "1.0.0"
-description = "`timed-count` provides a generator function that returns an iterator that delays each iteration by the specified time period. It can be used to execute code at a precise frequency."
+description = "timed-count provides an iterator that delays each iteration by a specified time period. It can be used to repeatedly execute code at a precise frequency."
 authors = ["morefigs"]
 homepage = "https://github.com/morefigs/timed-count"
 readme = "README.md"
